implementacao em andamento